--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="./lib/vconsole.min.js"></script>
+    <script>
+      window.myVConsole = new window.VConsole({
+        theme: 'dark',
+        onReady: () => window.myVConsole.hideSwitch(),
+      });
+      document.addEventListener('keydown', function (e) {
+        if (e.ctrlKey && e.keyCode === 123) {
+          // 按下 Ctrl + F12 键
+          window.myVConsole.show(); // 显示 vConsole
+        }
+      });
+      // window.myVConsole.hide(); // 隐藏 vConsole
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
