Fix: vConsole 地址问题

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./lib/vconsole.min.js"></script>
+    <script src="./lib/vconsole.js"></script>
     <script>
       window.myVConsole = new window.VConsole({
         theme: 'dark',
